Got the basic functionality from the devslopes tutorial video, I have some ideas of where to take this app. Will add onto it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">MealPicker</string>
+    <string name="defaultFood">Chinese</string>
+    <string name="decideBtn">Decide!</string>
+    <string name="add_new_food">add new food...</string>
+    <string name="add_place">Add Place</string>
+    <string name="image_logo_description">The default logo for the app</string>
 </resources>
