--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,10 @@
     <string name="app_name">MealPicker</string>
     <string name="defaultFood">Chinese</string>
     <string name="decideBtn">Decide!</string>
-    <string name="add_new_food">add new food...</string>
+    <string name="add_new_food">add new food…</string>
     <string name="add_place">Add Place</string>
     <string name="image_logo_description">The default logo for the app</string>
+    <string name="title_activity_maps">Nearby</string>
+    <string name="action_settings">Settings</string>
+    <string name="action_map">Map</string>
 </resources>
